--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@excalidraw/eslint-config": "1.0.3",
     "@excalidraw/excalidraw": "0.17.1-7381-cdf6d3e",
     "@types/mermaid": "9.2.0",
+    "@types/node": "^20.14.9",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.4",
     "@typescript-eslint/eslint-plugin": "5.59.9",
